--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -30,4 +30,5 @@ controller.index=index
 controller.signup=signup
 controller.login=login
 controller.billing=billing
+controller.dashboard=dashboard
 controller.error=error
