--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,12 +17,12 @@ spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=128KB
 spring.servlet.multipart.max-request-size=128KB
 # Session properties
-server.servlet.session.timeout=30m
+server.servlet.session.timeout=1m
 # Mail properties
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=a
-spring.mail.password=a
+spring.mail.username=simonweb98@gmail.com
+spring.mail.password=Googlemdp-
 # hCaptcha properties
 hCaptcha.secret.key=0xfECB063122695C2bEa912c2Ba79b6ccC5e914fab
 # Controller properties
@@ -30,5 +30,6 @@ controller.index=index
 controller.signup=signup
 controller.login=login
 controller.billing=billing
-controller.dashboard=dashboard
+controller.addmembers=addmembers
+controller.addmembersconfirm=addmembersconfirm
 controller.error=error
