--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,7 +21,7 @@ server.servlet.session.timeout=1m
 # Mail properties
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=simonweb98@gmail.com
+spring.mail.username=contact.ourasso@gmail.com
 spring.mail.password=Googlemdp-
 # hCaptcha properties
 hCaptcha.secret.key=0xfECB063122695C2bEa912c2Ba79b6ccC5e914fab
@@ -30,6 +30,6 @@ controller.index=index
 controller.signup=signup
 controller.login=login
 controller.billing=billing
-controller.addmembers=addmembers
-controller.addmembersconfirm=addmembersconfirm
+controller.addmember=addmember
+controller.addmemberconfirm=addmemberconfirm
 controller.error=error
