--- a/pom.xml
+++ b/pom.xml
@@ -77,10 +77,12 @@
         <dependency>
             <groupId>org.apache.poi</groupId>
             <artifactId>poi</artifactId>
+            <version>5.0.0</version>
         </dependency>
         <dependency>
             <groupId>org.apache.poi</groupId>
             <artifactId>poi-ooxml</artifactId>
+            <version>5.0.0</version>
         </dependency>
         <!-- Heroku dependencies -->
         <dependency>
