Add admin status Add profile page Delete useless files and methods

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,14 +22,18 @@ server.servlet.session.timeout=1m
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=contact.ourasso@gmail.com
-spring.mail.password=Googlemdp-
+spring.mail.password=olsgsvnzbtugghsr
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
 # hCaptcha properties
 hCaptcha.secret.key=0xfECB063122695C2bEa912c2Ba79b6ccC5e914fab
 # Controller properties
 controller.index=index
 controller.signup=signup
 controller.login=login
+controller.passwordforgotten=passwordforgotten
 controller.billing=billing
+controller.profile=profile
 controller.addmember=addmember
-controller.addmemberconfirm=addmemberconfirm
+controller.success=success
 controller.error=error
