--- a/pom.xml
+++ b/pom.xml
@@ -100,6 +100,11 @@
     </dependencies>
 
     <build>
+        <resources>
+            <resource>
+                <directory>src/main/resources</directory>
+            </resource>
+        </resources>
         <!-- Spring plugins -->
         <plugins>
             <plugin>
